add template, edit file

--- a/index.html
+++ b/index.html
@@ -72,10 +72,31 @@
           >Demo</a
         >
       </div>
+      <div class="item">
+        <div class="item__heading">
+          <h2>Parallax Template</h2>
+        </div>
+        <a href="https://buivu8620.github.io/W3_Parallax/" target="_blank">
+          <img
+            src="./assets/images/img_temp_parallax.jpg"
+            alt=""
+            class="item__img"
+          />
+        </a>
+
+        <a
+          class="item__btn"
+          href="https://buivu8620.github.io/W3_Parallax/"
+          target="_blank"
+          >Demo</a
+        >
+      </div>
     </div>
 
     <footer class="footer">
       Powered by <a href="https://www.facebook.com/vu.bui.8866/">Vu</a>
     </footer>
+
+    <script></script>
   </body>
 </html>
