--- a/index.html
+++ b/index.html
@@ -91,6 +91,25 @@
           >Demo</a
         >
       </div>
+      <div class="item">
+        <div class="item__heading">
+          <h2>Blog Template</h2>
+        </div>
+        <a href="https://buivu8620.github.io/W3_My-Blog/" target="_blank">
+          <img
+            src="./assets/images/img_temp_blog.jpg"
+            alt=""
+            class="item__img"
+          />
+        </a>
+
+        <a
+          class="item__btn"
+          href="https://buivu8620.github.io/W3_My-Blog/"
+          target="_blank"
+          >Demo</a
+        >
+      </div>
     </div>
 
     <footer class="footer">
