add template zingmp3

--- a/index.html
+++ b/index.html
@@ -5,116 +5,167 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" type="image/png" href="./assets/images/favicon.png" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css"
+    />
     <link rel="stylesheet" href="./style.css" />
     <link rel="stylesheet" href="./responsive.css" />
     <title>My template</title>
   </head>
   <body>
-    <div class="header">
-      <h1>My templates</h1>
+    <div class="app">
+      <div class="header">
+        <h1>My templates</h1>
+      </div>
+      <div class="container">
+        <div class="main">
+          <div class="item">
+            <div class="item__heading">
+              <h2>Band Template</h2>
+            </div>
+            <a href="https://buivu8620.github.io/the-band/" target="_blank">
+              <img
+                src="./assets/images/img_temp_band.jpg"
+                alt=""
+                class="item__img"
+              />
+            </a>
+
+            <a
+              class="item__btn"
+              href="https://buivu8620.github.io/the-band/"
+              target="_blank"
+              >Demo</a
+            >
+          </div>
+          <div class="item">
+            <div class="item__heading">
+              <h2>Architect Template</h2>
+            </div>
+            <a
+              href="https://buivu8620.github.io/br-architects/"
+              target="_blank"
+            >
+              <img
+                src="./assets/images/img_temp_architect.jpg"
+                alt=""
+                class="item__img"
+              />
+            </a>
+
+            <a
+              class="item__btn"
+              href="https://buivu8620.github.io/br-architects/"
+              target="_blank"
+              >Demo</a
+            >
+          </div>
+          <div class="item">
+            <div class="item__heading">
+              <h2>Gourmet Catering Template</h2>
+            </div>
+            <a
+              href="https://buivu8620.github.io/Gourmet-Catering/"
+              target="_blank"
+            >
+              <img
+                src="./assets/images/img_temp_gourmet_catering.jpg"
+                alt=""
+                class="item__img"
+              />
+            </a>
+
+            <a
+              class="item__btn"
+              href="https://buivu8620.github.io/Gourmet-Catering/"
+              target="_blank"
+              >Demo</a
+            >
+          </div>
+          <div class="item">
+            <div class="item__heading">
+              <h2>Parallax Template</h2>
+            </div>
+            <a href="https://buivu8620.github.io/W3_Parallax/" target="_blank">
+              <img
+                src="./assets/images/img_temp_parallax.jpg"
+                alt=""
+                class="item__img"
+              />
+            </a>
+
+            <a
+              class="item__btn"
+              href="https://buivu8620.github.io/W3_Parallax/"
+              target="_blank"
+              >Demo</a
+            >
+          </div>
+          <div class="item">
+            <div class="item__heading">
+              <h2>Blog Template</h2>
+            </div>
+            <a href="https://buivu8620.github.io/W3_My-Blog/" target="_blank">
+              <img
+                src="./assets/images/img_temp_blog.jpg"
+                alt=""
+                class="item__img"
+              />
+            </a>
+
+            <a
+              class="item__btn"
+              href="https://buivu8620.github.io/W3_My-Blog/"
+              target="_blank"
+              >Demo</a
+            >
+          </div>
+          <!--  -->
+          <div class="item">
+            <div class="item__heading">
+              <h2>Zing MP3 Clone</h2>
+            </div>
+            <a
+              href="https://buivu8620.github.io/zingmp3-clone/"
+              target="_blank"
+            >
+              <img src="./assets/images/zingmp3.png" alt="" class="item__img" />
+            </a>
+
+            <a
+              class="item__btn"
+              href="https://buivu8620.github.io/zingmp3-clone/"
+              target="_blank"
+              >Demo</a
+            >
+          </div>
+        </div>
+        <!-- pagination -->
+        <div class="pagination">
+          <a href="#">&laquo;</a>
+          <a class="active" href="#">1</a>
+          <a href="#">2</a>
+          <a href="#">3</a>
+          <a href="#">4</a>
+          <a href="#">5</a>
+          <a href="#">6</a>
+          <a href="#">&raquo;</a>
+        </div>
+      </div>
+
+      <footer class="footer">
+        <div>
+          Powered by <a href="https://www.facebook.com/vu.bui.8866/">VuBui</a>
+        </div>
+        <div class="footer__list">
+          <a href=""><i class="fa-brands fa-facebook"></i></a>
+          <a href=""><i class="fa-brands fa-github"></i></a>
+          <a href=""><i class="fa-brands fa-google"></i></a>
+          <a href=""><i class="fa-brands fa-discord"></i></a>
+        </div>
+      </footer>
     </div>
-
-    <div class="main">
-      <div class="item">
-        <div class="item__heading">
-          <h2>Band Template</h2>
-        </div>
-        <a href="https://buivu8620.github.io/the-band/" target="_blank">
-          <img
-            src="./assets/images/img_temp_band.jpg"
-            alt=""
-            class="item__img"
-          />
-        </a>
-
-        <a
-          class="item__btn"
-          href="https://buivu8620.github.io/the-band/"
-          target="_blank"
-          >Demo</a
-        >
-      </div>
-      <div class="item">
-        <div class="item__heading">
-          <h2>Architect Template</h2>
-        </div>
-        <a href="https://buivu8620.github.io/br-architects/" target="_blank">
-          <img
-            src="./assets/images/img_temp_architect.jpg"
-            alt=""
-            class="item__img"
-          />
-        </a>
-
-        <a
-          class="item__btn"
-          href="https://buivu8620.github.io/br-architects/"
-          target="_blank"
-          >Demo</a
-        >
-      </div>
-      <div class="item">
-        <div class="item__heading">
-          <h2>Gourmet Catering Template</h2>
-        </div>
-        <a href="https://buivu8620.github.io/Gourmet-Catering/" target="_blank">
-          <img
-            src="./assets/images/img_temp_gourmet_catering.jpg"
-            alt=""
-            class="item__img"
-          />
-        </a>
-
-        <a
-          class="item__btn"
-          href="https://buivu8620.github.io/Gourmet-Catering/"
-          target="_blank"
-          >Demo</a
-        >
-      </div>
-      <div class="item">
-        <div class="item__heading">
-          <h2>Parallax Template</h2>
-        </div>
-        <a href="https://buivu8620.github.io/W3_Parallax/" target="_blank">
-          <img
-            src="./assets/images/img_temp_parallax.jpg"
-            alt=""
-            class="item__img"
-          />
-        </a>
-
-        <a
-          class="item__btn"
-          href="https://buivu8620.github.io/W3_Parallax/"
-          target="_blank"
-          >Demo</a
-        >
-      </div>
-      <div class="item">
-        <div class="item__heading">
-          <h2>Blog Template</h2>
-        </div>
-        <a href="https://buivu8620.github.io/W3_My-Blog/" target="_blank">
-          <img
-            src="./assets/images/img_temp_blog.jpg"
-            alt=""
-            class="item__img"
-          />
-        </a>
-
-        <a
-          class="item__btn"
-          href="https://buivu8620.github.io/W3_My-Blog/"
-          target="_blank"
-          >Demo</a
-        >
-      </div>
-    </div>
-
-    <footer class="footer">
-      Powered by <a href="https://www.facebook.com/vu.bui.8866/">Vu</a>
-    </footer>
 
     <script></script>
   </body>
